# tmi-clients

./: .gitignore  CLAUDE.md  CLIENT_IMPROVEMENTS.md  CLIENT_UPDATE_SUMMARY.md  DEPENDENCY_HEALTH_REPORT.md  DFD_DIAGRAM_FIX.md  MIGRATION_GUIDE.md  OPENAPI_FIX_SUMMARY.md  OPENAPI_ISSUES_SUMMARY.md  QUICK_START.md  README.md  README_FIXES.md  REGENERATION_PLAN.md  REGENERATION_README.md  REGENERATION_REPORT.md  RELEASING.md  SUMMARY.md  check_regen_drift.py  regen_common.py  regenerate_all.py  regenerate_client.sh  regenerate_go.py  regenerate_js.py  regenerate_python.py  regenerate_ts.py  release_python.sh  swagger-codegen-config.json  test_diagram_fixes.py  ty.toml  versions.json
python-client-generated/: .gitignore  .openapi-generator-ignore  AUTH_FIX_SUMMARY.md  DEVELOPER_GUIDE.md  README.md  REGENERATION_REPORT.md  pyproject.toml  requirements.txt  setup.py  test-requirements.txt  test_auth_settings_fix.py  test_diagram_fixes.py  tmi-openapi.json  tox.ini
python-client-generated/.regeneration_backup/: pyproject.toml  test_diagram_fixes.py
python-client-generated/docs/: AddGroupMemberRequest.md  AddonInvocationQuota.md  AddonParameter.md  AddonQuotaUpdate.md  AddonResponse.md  AddonsApi.md  AddonsUserIdBody.md  AdminGroup.md  AdminGroupListResponse.md  AdminUser.md  AdminUserListResponse.md  AdminUsersApi.md  AdministrationApi.md  Administrator.md  AllOfCollaborationSessionHost.md  AllOfCollaborationSessionPresenter.md  AllOfInvocationResponseInvokedBy.md  AllOfMinimalEdgeSource.md  AllOfMinimalEdgeTarget.md  AllOfProjectListItemStatus.md  AllOfResponsiblePartyUser.md  AllOfRollbackResponseAuditEntry.md  AllOfSurveyListItemCreatedBy.md  AllOfSurveyResponseListItemOwner.md  AllOfTMListItemCreatedBy.md  AllOfTMListItemOwner.md  AllOfTMListItemSecurityReviewer.md  AllOfTeamBaseStatus.md  AllOfTeamListItemStatus.md  AllOfTeamMemberUser.md  AllOfThreatModelBaseOwner.md  AllOfThreatModelBaseSecurityReviewer.md  AllOfTriageNoteListItemCreatedBy.md  ApiInfo.md  ApiInfoApi.md  ApiInfoHealth.md  ApiInfoOperator.md  ApiInfoService.md  ApiInfoStatus.md  Asset.md  (+273 more)
python-client-generated/examples/: simple_diagram.py
python-client-generated/scripts/: analyze_spec_changes.py  backup_before_regen.sh  openapi-generator-config.json  regenerate_client.sh  validate_regeneration.py
python-client-generated/swagger_client/: __init__.py  api_client.py  configuration.py  rest.py
python-client-generated/test/: test_add_group_member_request.py  test_addon_invocation_quota.py  test_addon_parameter.py  test_addon_quota_update.py  test_addon_response.py  (+365 more)
(+8657 files in other folders)
