[project]
name = "tmi-client"
version = "1.0.0"
description = "TMI API Python Client"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "Apache-2.0"}
keywords = ["TMI", "Threat Modeling", "API", "OpenAPI"]
authors = [
    {name = "TMI Contributors"}
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
]

dependencies = [
    "certifi >= 2025.11.12",
    "six >= 1.17.0",
    "python-dateutil >= 2.9.0.post0",
    "setuptools >= 75.3.2",
    "urllib3 >= 2.2.3",
]

[project.optional-dependencies]
test = [
    "pytest >= 8.3.5",
    "pytest-cov >= 5.0.0",
    "pytest-randomly >= 3.15.0",
]

[project.urls]
Homepage = "https://github.com/threagile/tmi-clients"
Repository = "https://github.com/threagile/tmi-clients"
Documentation = "https://github.com/threagile/tmi-clients/tree/main/python-client-generated"

[build-system]
requires = ["setuptools>=70.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
testpaths = ["test"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
addopts = "-v --strict-markers"

[tool.coverage.run]
source = ["tmi_client"]
omit = ["*/test/*", "*/tests/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
]
